stats endpoints done
